h6 applied with correct margins and span fontsize enlarged for visibility

--- a/css/_contact.css
+++ b/css/_contact.css
@@ -1,6 +1,6 @@
 .contact {
- /* background-color: var(--background-secondary);
-    padding:7rem; */
-    justify-content: right;
-    align-items: center;
+    display: grid;
+    justify-content: center;
+    align-content: flex-end;
+    
 }
