--- a/css/_h1.css
+++ b/css/_h1.css
@@ -14,3 +14,10 @@ h3 {
 h4 {
     padding:1rem;
 }
+
+h6 {
+    font-size: 2rem;
+    padding-bottom:8%;
+    padding-top:5%;
+
+}
