--- a/css/_section.css
+++ b/css/_section.css
@@ -11,5 +11,9 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-gap: 20px;
+    /* grid-gap: 20px; */
+    justify-content: center;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
 }
